fix: move overflow control to pokemon selector lists

--- a/src/components/primary-widgets/main-page/MainPage.less
+++ b/src/components/primary-widgets/main-page/MainPage.less
@@ -1,8 +1,6 @@
 .selectors {
     align-items: center;
-    height: 50vh;
     width: 100%;
-    overflow-y: scroll;
 
     h2 {
         color: lightgray;
