--- a/src/components/primary-widgets/selectors/Selectors.less
+++ b/src/components/primary-widgets/selectors/Selectors.less
@@ -43,6 +43,16 @@
     // border-width: 2px;
     // border-color: white;
     // border-style: solid;
+
+    .type-selector-result-list {
+        overflow-y: auto;
+        height: 25vh;
+        align-items: flex-start;
+
+        .background-container {
+            border-radius: 25px;
+        }
+    }
 }
 
 .recipe-selector-container {
